Fixed some scaling issues primarily on mobile.

--- a/personal-folder/styles/base.css
+++ b/personal-folder/styles/base.css
@@ -26,13 +26,14 @@
 body {
     background-color: var(--secondary-color);
     font-family: var(--paragraph-font);
-    font-size: 20px;
+    font-size: 1.2em;
     color: var(--paragraph-color-on-white);
 }
 
 h1 {
     font-family: var(--heading-font);
     color: var(--accent1-color);
+    font-size: 1.5em;
 }
 
 h2 {
