--- a/personal-folder/styles/home.css
+++ b/personal-folder/styles/home.css
@@ -1,5 +1,5 @@
-img {
-    max-width: 500px;
+#nes-console {
+    max-width: 250px;
     display: block;
     margin: auto;
 }
@@ -10,11 +10,11 @@ h1 {
 
 main {
     text-align: justify;
-    margin: 30px;
+    margin: 1em;
 }
 
 @media screen and (min-width: 700px){
-    img {
+    #nes-console {
         max-width: 700px;
     }
 
